--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <title></title>
+    <title>Dot Dot CSS Loader</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <div class="loader">
+        <div class="dot"></div>
+        <div class="dot"></div>
+    </div>
 </body>
 </html>
